--- a/chrome/manifest.json
+++ b/chrome/manifest.json
@@ -1,14 +1,14 @@
 {
     "manifest_version": 2,
     "name": "GBF BookMaker",
-    "description": "Guild's bookmaker data transfer to outside",
+    "description": "Guild's bookmaker data transfer to server",
     "version": "0.0.1",
     "browser_action": {
         "default_icon": {
             "128": "B2-128.png"
         },
         "default_popup": "popup.html",
-        "default_title": "popup"
+        "default_title": "Data Collector"
     },
     "background": {
         "page": "background.html",
